[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/DumpsterCat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/PuzzleBlock.tscn" type="PackedScene" id=3]
[ext_resource path="res://Pawspector Valley/Scenes/MiscScenes/InteractArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pawspector Valley/Scenes/CharacterScenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/wall.png" type="Texture" id=6]
[ext_resource path="res://Pawspector Valley/Scenes/MiscScenes/Portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/PuzzleRoomFourPartB.gd" type="Script" id=8]

[sub_resource type="TileSet" id=1]
0/name = "wall.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( -32, -32, 128, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [  ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="PuzzleRoomFourPartB" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 8 )
specificOrder = [ "03", "13", "12", "11", "01", "00", "10", "20", "21", "22", "23", "33", "32", "31" ]

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( -589770, 0, 0, -458759, 0, 0, -458755, 0, 0, -458754, 0, 0, -458753, 0, 0, -524288, 0, 0, -524287, 0, 0, -524286, 0, 0, -524285, 0, 0, -524284, 0, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524263, 0, 0, -524241, 0, 0, -524240, 0, 0, -524239, 0, 0, -524238, 0, 0, -524237, 0, 0, -524236, 0, 0, -524235, 0, 0, -524234, 0, 0, -524233, 0, 0, -524232, 0, 0, -524231, 0, 0, -524230, 0, 0, -524229, 0, 0, -524228, 0, 0, -524227, 0, 0, -524226, 0, 0, -524225, 0, 0, -524224, 0, 0, -524223, 0, 0, -524222, 0, 0, -524221, 0, 0, -524220, 0, 0, -524219, 0, 0, -524218, 0, 0, -524217, 0, 0, -524216, 0, 0, -524215, 0, 0, -524214, 0, 0, -524213, 0, 0, -524212, 0, 0, -524211, 0, 0, -524210, 0, 0, -524207, 0, 0, -524206, 0, 0, -524205, 0, 0, -524204, 0, 0, -393223, 0, 0, -393222, 0, 0, -393221, 0, 0, -393220, 0, 0, -393219, 0, 0, -458747, 0, 0, -458746, 0, 0, -458745, 0, 0, -458744, 0, 0, -458743, 0, 0, -458742, 0, 0, -458741, 0, 0, -458740, 0, 0, -458739, 0, 0, -458738, 0, 0, -458737, 0, 0, -458736, 0, 0, -458735, 0, 0, -458734, 0, 0, -458733, 0, 0, -458732, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 0, 0, -458725, 0, 0, -458724, 0, 0, -458723, 0, 0, -458722, 0, 0, -458721, 0, 0, -458720, 0, 0, -458719, 0, 0, -458718, 0, 0, -458717, 0, 0, -458716, 0, 0, -458715, 0, 0, -458714, 0, 0, -458713, 0, 0, -458712, 0, 0, -458711, 0, 0, -458710, 0, 0, -458709, 0, 0, -458708, 0, 0, -458707, 0, 0, -458706, 0, 0, -458705, 0, 0, -458704, 0, 0, -458703, 0, 0, -458702, 0, 0, -458701, 0, 0, -458700, 0, 0, -458699, 0, 0, -458698, 0, 0, -458697, 0, 0, -458696, 0, 0, -458695, 0, 0, -458694, 0, 0, -458693, 0, 0, -458692, 0, 0, -458691, 0, 0, -458690, 0, 0, -458689, 0, 0, -458688, 0, 0, -458687, 0, 0, -458686, 0, 0, -458685, 0, 0, -458684, 0, 0, -458683, 0, 0, -458682, 0, 0, -458673, 0, 0, -458672, 0, 0, -458671, 0, 0, -458668, 0, 0, -327687, 0, 0, -327684, 536870912, 0, -393168, 0, 0, -393167, 0, 0, -393166, 0, 0, -393165, 0, 0, -393164, 0, 0, -393163, 0, 0, -393162, 0, 0, -393161, 0, 0, -393160, 0, 0, -393159, 0, 0, -393158, 0, 0, -393157, 0, 0, -393156, 0, 0, -393155, 0, 0, -393154, 0, 0, -393153, 0, 0, -393152, 0, 0, -393151, 0, 0, -393150, 0, 0, -393149, 0, 0, -393148, 0, 0, -393147, 0, 0, -393146, 0, 0, -393145, 0, 0, -393144, 0, 0, -393143, 0, 0, -393132, 0, 0, -262151, 0, 0, -262148, 536870912, 0, -327637, 0, 0, -327625, 0, 0, -327624, 0, 0, -327623, 0, 0, -327622, 0, 0, -327621, 0, 0, -327620, 0, 0, -327619, 0, 0, -327618, 0, 0, -327617, 0, 0, -327616, 0, 0, -327615, 0, 0, -327614, 0, 0, -327613, 0, 0, -327612, 0, 0, -327611, 0, 0, -327609, 0, 0, -327608, 0, 0, -327607, 0, 0, -327606, 0, 0, -327605, 0, 0, -327604, 0, 0, -327601, 0, 0, -327600, 0, 0, -327596, 0, 0, -196615, 0, 0, -196612, 536870912, 0, -196611, 536870912, 0, -196610, 536870912, 0, -196609, 536870912, 0, -262144, 536870912, 0, -262140, 0, 0, -262136, 536870912, 0, -262135, 536870912, 0, -262134, 536870912, 0, -262133, 536870912, 0, -262132, 536870912, 0, -262131, 536870912, 0, -262130, 536870912, 0, -262129, 536870912, 0, -262128, 536870912, 0, -262127, 536870912, 0, -262123, 0, 0, -262120, 536870912, 0, -262119, 536870912, 0, -262118, 536870912, 0, -262114, 0, 0, -262113, 0, 0, -262112, 0, 0, -262111, 0, 0, -262110, 0, 0, -262109, 0, 0, -262108, 0, 0, -262107, 0, 0, -262106, 0, 0, -262105, 0, 0, -262101, 0, 0, -262097, 0, 0, -262096, 0, 0, -262095, 0, 0, -262094, 0, 0, -262093, 0, 0, -262092, 0, 0, -262091, 0, 0, -262090, 0, 0, -262089, 0, 0, -262088, 0, 0, -262087, 0, 0, -262086, 0, 0, -262085, 0, 0, -262084, 0, 0, -262083, 0, 0, -262082, 0, 0, -262079, 0, 0, -262078, 0, 0, -262074, 0, 0, -262073, 0, 0, -262070, 0, 0, -262069, 0, 0, -262068, 0, 0, -262067, 0, 0, -262066, 0, 0, -262065, 0, 0, -262061, 0, 0, -262060, 0, 0, 1507320, 0, 0, 1507324, 536870912, 0, 1572856, 0, 0, 1572860, 536870912, 0, 1572862, 536870912, 0, 1572863, 536870912, 0, 1507328, 0, 0, 1507329, 536870912, 0, 1507330, 536870912, 0, 1507334, 0, 0, 1507335, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 536870912, 0, 1507360, 536870912, 0, 1507361, 536870912, 0, 1507362, 536870912, 0, 1507363, 536870912, 0, 1507364, 536870912, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507374, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507378, 0, 0, 1507379, 0, 0, 1507380, 0, 0, 1507383, 0, 0, 1507384, 0, 0, 1507387, 0, 0, 1507388, 0, 0, 1507389, 0, 0, 1507390, 0, 0, 1507391, 0, 0, 1507392, 0, 0, 1507393, 0, 0, 1507394, 0, 0, 1507395, 0, 0, 1507398, 0, 0, 1507399, 0, 0, 1507400, 0, 0, 1507401, 0, 0, 1507402, 0, 0, 1507403, 0, 0, 1507404, 0, 0, 1507405, 0, 0, 1507406, 0, 0, 1507407, 0, 0, 1507411, 0, 0, 1507412, 0, 0, 1638392, 0, 0, 1638396, 536870912, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572878, 0, 0, 1572879, 0, 0, 1572907, 0, 0, 1572908, 0, 0, 1572909, 0, 0, 1572910, 0, 0, 1572911, 0, 0, 1572912, 0, 0, 1572913, 0, 0, 1572914, 0, 0, 1572915, 0, 0, 1572916, 0, 0, 1572917, 0, 0, 1572918, 0, 0, 1572919, 0, 0, 1572920, 0, 0, 1572921, 0, 0, 1572922, 0, 0, 1572923, 0, 0, 1572924, 0, 0, 1572925, 0, 0, 1572926, 0, 0, 1572927, 0, 0, 1572931, 0, 0, 1572932, 0, 0, 1572933, 0, 0, 1572934, 0, 0, 1572935, 0, 0, 1572936, 0, 0, 1572937, 0, 0, 1572938, 0, 0, 1572939, 0, 0, 1572940, 0, 0, 1572941, 0, 0, 1572942, 0, 0, 1572943, 0, 0, 1572948, 0, 0, 1703930, 0, 0, 1703931, 0, 0, 1703932, 0, 0, 1703933, 0, 0, 1703934, 0, 0, 1703935, 0, 0, 1638400, 0, 0, 1638401, 0, 0, 1638402, 0, 0, 1638403, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1638406, 0, 0, 1638407, 0, 0, 1638408, 0, 0, 1638409, 0, 0, 1638410, 0, 0, 1638411, 0, 0, 1638412, 0, 0, 1638413, 0, 0, 1638414, 0, 0, 1638415, 0, 0, 1638416, 0, 0, 1638417, 0, 0, 1638418, 0, 0, 1638419, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638423, 0, 0, 1638424, 0, 0, 1638425, 0, 0, 1638426, 0, 0, 1638427, 0, 0, 1638428, 0, 0, 1638429, 0, 0, 1638430, 0, 0, 1638431, 0, 0, 1638432, 0, 0, 1638433, 0, 0, 1638434, 0, 0, 1638435, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0, 1638441, 0, 0, 1638442, 0, 0, 1638443, 0, 0, 1638446, 0, 0, 1638447, 0, 0, 1638448, 0, 0, 1638449, 0, 0, 1638450, 0, 0, 1638451, 0, 0, 1638452, 0, 0, 1638453, 0, 0, 1638454, 0, 0, 1638456, 0, 0, 1638457, 0, 0, 1638458, 0, 0, 1638460, 0, 0, 1638461, 0, 0, 1638462, 0, 0, 1638463, 0, 0, 1638464, 0, 0, 1638465, 0, 0, 1638466, 0, 0, 1638467, 0, 0, 1638468, 0, 0, 1638469, 0, 0, 1638470, 0, 0, 1638471, 0, 0, 1638472, 0, 0, 1638479, 0, 0, 1638480, 0, 0, 1638481, 0, 0, 1704005, 0, 0, 1704006, 0, 0, 1704007, 0, 0, 1704008, 0, 0, 1704009, 0, 0, 1704010, 0, 0, 1704011, 0, 0, 1704012, 0, 0, 1704013, 0, 0, 1704014, 0, 0, 1704015, 0, 0, 1704016, 0, 0, 1704017, 0, 0, 1704018, 0, 0, 1704019, 0, 0, 1704020, 0, 0, 1769534, 0, 0, 1769535, 0, 0, 1769536, 0, 0, 1769537, 0, 0, 1769538, 0, 0, 1769539, 0, 0, 1769540, 0, 0, 1769541, 0, 0 )

[node name="PuzzleBlock1" parent="." instance=ExtResource( 3 )]

[node name="DumpsterCat" parent="." instance=ExtResource( 1 )]
position = Vector2( 40, 65 )
part = 1

[node name="InteractArea" parent="DumpsterCat" instance=ExtResource( 4 )]
position = Vector2( 0, 8 )
interactLabel = "dumpster_cat"
interactType = "display_value"
interactValue = [ "yoyoyo" ]

[node name="PortalToPrevPart" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 112 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToPrevPart2" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 161 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToPrevPart3" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 65 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToPrevPart4" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 17 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToNextPart" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 61 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart2" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 109 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart3" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 157 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart4" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 14 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 320, 97 )
camera_bottom = 190
camera_top = -10
camera_left = -10
camera_right = 330

[node name="PortalToPrevPart5" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 41 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToPrevPart6" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 88 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToPrevPart7" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 137 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartA.tscn"
player_spawn_location = Vector2( 304, 90 )

[node name="PortalToNextPart5" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 37 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart6" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 85 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart7" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 133 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[node name="PortalToNextPart8" parent="." instance=ExtResource( 7 )]
position = Vector2( 352, 180 )
next_scene_path = "res://Pawspector Valley/Scenes/Rooms/PuzzleRoomFourPartC.tscn"
player_spawn_location = Vector2( 32, 102 )

[editable path="PuzzleBlock1"]
